syntax = "proto3";
package pt.tecnico.sec.bftb.server.grpc;

// Open Account Operation

message OpenAccountRequest {
  bytes publicKey = 1;
}

message SignedOpenAccountRequest {
  OpenAccountRequest content = 1;
  bytes signature = 2;
}

message OpenAccountResponse {
  // empty
}

// Send Amount Operation

message SendAmountRequest {
  bytes sourceKey = 1;
  bytes destinationKey = 2;
  int32 amount = 3;
}

message SignedSendAmountRequest {
  SendAmountRequest content = 1;
  bytes signature = 2;
}

message SendAmountResponse {
  // empty
}

// Check Account Operation

message CheckAccountRequest {
  bytes publicKey = 1;
  bytes signature = 2;
}

message SignedCheckAccountRequest {
  CheckAccountRequest content = 1;
  bytes signature = 2;
}

message CheckAccountResponse {
  int32 balance = 1;
  string pendingTransfers = 2;
}

// Receive Amount Operation

message ReceiveAmountRequest {
  bytes publicKey = 1;
  int32 transferNum = 2;
}

message SignedReceiveAmountRequest {
  ReceiveAmountRequest content = 1;
  bytes signature = 2;
}

message ReceiveAmountResponse {
  // empty
}

// Audit Operation

message AuditRequest {
  bytes publicKey = 1;
}

message SignedAuditRequest {
  AuditRequest content = 1;
  bytes signature = 2;
}

message AuditResponse {
  string history = 1;
}

// Request Nonce Operation

message GetNonceRequest {
  bytes publicKey = 1;
}

message GetNonceResponse {
  bytes cypheredNonce = 1;
}

// Ping Operation

message PingRequest {
  string input = 1;
}

message PingResponse {
  string output = 1;
}

// Service

service ServerService {
  rpc open_account(SignedOpenAccountRequest) returns (OpenAccountResponse);
  rpc send_amount(SignedSendAmountRequest) returns (SendAmountResponse);
  rpc check_account(SignedCheckAccountRequest) returns (CheckAccountResponse);
  rpc receive_amount(SignedReceiveAmountRequest) returns (ReceiveAmountResponse);
  rpc audit(SignedAuditRequest) returns (AuditResponse);
  rpc get_nonce(GetNonceRequest) returns (GetNonceResponse);
  rpc ping(PingRequest) returns (PingResponse);
}